# buck2-nix

./: .buckconfig  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .watchmanconfig  README.md  bors.toml  flake.nix
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/direnv/: .gitignore  README.md  action.yml  index.js  package-lock.json  package.json
.github/workflows/: bb-runner.yml  build.yml  pr.yml  r13y.yml  update-buck2.yml
.helix/: languages.toml
buck/: README.md  prelude.bzl
buck/nix/: .buckconfig  BUILD  README.md  TARGETS  cache-upload.sh  flake.nix  toolchains.bzl  update.sh
buck/nix/bb/: buildbarn-vm.nix  container.nix  vm.nix
buck/nix/buck2/: README.md  aarch64-linux-notify-hack.patch  custom-opt-settings.patch  default.nix  no-vendored-protoc.patch  remove-reapi-tls.patch  revert-boxing-large-structs.patch  update.sh  (+3 more)
buck/nix/setup/: Cargo.toml  README.md
buck/nix/setup/src/: main.rs
buck/prelude/: .buckconfig  README.md  attributes.bzl  bash.bzl  config.bzl  download.bzl  license.bzl  nix.bzl  nixpkgs.bzl  prelude.bzl  providers.bzl  rust.bzl  zip.bzl
buck2/: README.md
buck2/prelude/: prelude.bzl  rust.bzl
docs/: README.md
installer/: Cargo.toml  README.md  flake.nix
installer/src/: main.rs
nix/: flake.nix
nix/buck2/: default.nix
src/bxl/: hello.bxl
src/genrule/: BUILD
src/hello/: BUILD  PACKAGE  TARGETS  main.rs
src/hongfuzz-cxx/: BUILD  PACKAGE  api.h
src/reapi/: defs.bzl
src/renode/: BUILD  TARGETS  renode.nix  test.robot  unleashed.resc
src/zip/: BUILD  TARGETS
(+69 files in other folders)
