[package]
name = "setup"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"

tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter", "fmt", "ansi", "registry", "json", "local-time" ] }

clap = { version = "4.0.29", features = [ "derive" ] }
dialoguer = "0.10.2"
indicatif = "0.17.2"
console = "0.15.2"

cmd_lib = "1.3.0"

[profile.release]
opt-level = "z" # size
lto = true
